--- a/src/assets/scss/pagination.scss
+++ b/src/assets/scss/pagination.scss
@@ -3,7 +3,7 @@ button.btn-next {
 	border-radius: 50%;
 	position: fixed;
 	top: calc(50dvh - 2rem);
-	z-index: 10;
+	z-index: 20;
 }
 button.btn-prev {
 	left: calc(var(--padding-page-x) / 3);
